--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,6 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
     implementation 'com.google.android.libraries.places:places-compat:2.0.0'
     implementation 'com.google.firebase:firebase-firestore:21.1.1'
+    implementation 'com.google.maps.android:android-maps-utils:0.5'
+
 }
