--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'com.google.gms.google-services'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.hackathon.livenoise"
+        applicationId "com.hackathon.livenoisex"
         minSdkVersion 22
         targetSdkVersion 28
         versionCode 1
@@ -34,3 +34,5 @@ dependencies {
     implementation 'com.google.android.libraries.places:places-compat:2.0.0'
     implementation 'com.google.firebase:firebase-firestore:21.1.1'
 }
+
+apply plugin: 'com.google.gms.google-services'
