--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,9 @@ dependencies {
     implementation 'com.google.android.libraries.places:places-compat:2.0.0'
     implementation 'com.google.firebase:firebase-firestore:21.1.1'
     implementation 'com.google.maps.android:android-maps-utils:0.5'
-
+    implementation 'com.google.firebase:firebase-storage:19.1.0'
+    implementation 'com.gauravk.audiovisualizer:audiovisualizer:0.9.2'
+    implementation 'com.taishi-y:musicindicator:0.1.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
